Fix layout issues

--- a/responsive_design/03-styles.css
+++ b/responsive_design/03-styles.css
@@ -219,6 +219,10 @@
   }
 
   @media(max-width: 767px) {
+    :root {
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
+    }
     ul.row, .row {
       flex-direction: column;
       margin: 0;
@@ -228,7 +232,7 @@
       margin: 0 0 3rem 0;
     }
 
-    .col-13, .col-1-2 {
+    .col-1-3, .col-1-2 {
       width: 100%;
     }
   }
